--- a/app/src/main/res/layout/list_user.xml
+++ b/app/src/main/res/layout/list_user.xml
@@ -50,11 +50,19 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                tools:text="3" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="@dimen/list_user_padding"
+                android:text="@string/repositories"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                tools:text="3 repositories" />
+                tools:text="repositories" />
 
         </LinearLayout>
-
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
