--- a/app/src/main/res/layout/fragment_users.xml
+++ b/app/src/main/res/layout/fragment_users.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.appcompat.widget.LinearLayoutCompat
+    <com.google.android.material.progressindicator.LinearProgressIndicator
         android:id="@+id/progressLoading"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
